--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@cashfreepayments/cashfree-js": "^1.0.6",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.19.0",
     "@prisma/extension-accelerate": "^3.0.1",
     "@radix-ui/react-slot": "^1.2.4",
     "axios": "^1.13.4",
     "bcrypt": "^6.0.0",
+    "cashfree-pg": "^5.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.562.0",
-    "next": "16.1.3",
+    "next": "^16.1.6",
     "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
