--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.30.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
     "next-auth": "^5.0.0-beta.30",
