--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^6.19.0",
     "@prisma/extension-accelerate": "^3.0.1",
     "@radix-ui/react-slot": "^1.2.4",
+    "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.13.4",
     "bcrypt": "^6.0.0",
     "cashfree-pg": "^5.1.0",
@@ -25,6 +26,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.30.1",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.562.0",
     "next": "^16.1.6",
     "next-auth": "^5.0.0-beta.30",
